# aoc

./: Cargo.toml  LICENSE.md
src/: aoc2021.rs  aoc2022.rs  aoc2023.rs  aoc2024.rs  aoc2025.rs  lib.rs  main.rs  parse.rs  solutions.rs  template.rs  util.rs
