[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="*", features=["blocking"] }
dotenv = "*"
clap = { version = "4.0.29", features = ["derive"] }
is-terminal = "0.4.9"
